5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1846_1273.log
== SUBMITION (2019-06-22 11:48:30) 
-- CODE:
from numpy import *
from numpy.linalg import *
 m= array[[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]]
b=[[50],[-120],[350],[870]]	
x=dot(inv(m),b)
-- EXECUTION TIME:
0.583749
-- ERROR:
  File "/home/codebench/codes/1846/1273/main.py", line 3
    m= array[[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]]
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 11:48:34) 
-- CODE:
from numpy import *
from numpy.linalg import *
 m= array[[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]]
b=[[50],[-120],[350],[870]]	
x=dot(inv(m),b)
-- ERROR:
File "XXXX", line 3
    m= array[[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]]
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 11:48:50) 
-- CODE:
from numpy import *
from numpy.linalg import *
 m= array[[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]]
b=[[50],[-120],[350],[870]]	
x=dot(inv(m),b)
print(x)
-- ERROR:
File "XXXX", line 3
    m= array[[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]]
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 11:49:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array[[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]]
b=array[[50],[-120],[350],[870]]	
x=dot(inv(m),b)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 11:49:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([[50],[-120],[350],[870]])	
x=dot(inv(m),b)
print(x)
-- EXECUTION TIME:
1.11493
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[[280.]
 [230.]
 [350.]
 [590.]]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 11:49:57) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([[50],[-120],[350],[870]])	
x=dot(inv(m),b)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 11:50:36) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([[50],[-120],[350],[870]])	
x=dot(inv(m),b)
print(round(x, 2))
-- EXECUTION TIME:
1.12568
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1273/main.py", line 6, in <module>
    print(round(x, 2))
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 11:50:38) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([[50],[-120],[350],[870]])	
x=dot(inv(m),b)
print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 11:51:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([[50],[-120],[350],[870]])	
x=dot(inv(m),b)
print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 11:52:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([[50],[-120],[350],[870]])	
x=round(dot(inv(m),b), 2)
print(x)
-- EXECUTION TIME:
0.886482
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1846/1273/main.py", line 5, in <module>
    x=round(dot(inv(m),b), 2)
TypeError: type numpy.ndarray doesn't define __round__ method

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 11:52:05) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([[50],[-120],[350],[870]])	
x=round(dot(inv(m),b), 2)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 11:53:03) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([[50],[-120],[350],[870]])	
x=dot(inv(m),b)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 11:54:27) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 12:00:33) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(x)
-- EXECUTION TIME:
1.64974
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 12:00:34) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(x)
-- EXECUTION TIME:
2.63321
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 12:00:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(x)
-- EXECUTION TIME:
3.32105
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1846/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 12:00:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(x)
-- EXECUTION TIME:
2.72433
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1846/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 12:00:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(x)
-- EXECUTION TIME:
2.7607
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1846/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 12:00:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(x)
-- EXECUTION TIME:
2.92027
-- ERROR:
sh: 1: cannot open /home/codebench/codes/1846/1273/cbtemp.txt: No such file

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 12:01:26) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(x)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 12:03:18) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(round(x, 2))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 12:03:24) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(round(x, 1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 12:03:48) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=round(dot(inv(m),b), 1)
print(x, 1)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 12:06:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(matrix.round(x,1))
-- EXECUTION TIME:
1.10545
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 12:06:10) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(matrix.round(x,1))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 12:06:15) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)
print(matrix.round(x,1))
-- EXECUTION TIME:
1.16491
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 12:10:23) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)

z = zeros(4)

for i in range(size(X)):
	z[0] = round(x[0], 1)
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 12:10:35) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)

z = zeros(4)

for i in range(size(x)):
	z[0] = round(x[0], 1)
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 12:10:44) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)

z = zeros(4)

for i in range(size(x)):
	z[i] = round(x[0], 1)
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-22 12:10:53) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)

z = zeros(4)

for i in range(size(x)):
	z[i] = round(x[i], 1)
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-22 12:11:04) 
-- CODE:
from numpy import *
from numpy.linalg import *
m= array([[1,-1,0,0],[0, 1, -1, 0],[0, 0, 1, 0],[1, 0, 0, 1]])
b=array([50,-120,350,870])	
x=dot(inv(m),b)

z = zeros(4)

for i in range(size(x)):
	z[i] = round(x[i], 1)
	
print(z)
-- EXECUTION TIME:
1.09799
-- TEST CASE 1:
---- input:
Não_há
---- correct output:
[280. 230. 350. 590.]
---- user output:
[280. 230. 350. 590.]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:28:11) 
-- CODE:
from numpy import *
from numpy.linalg import *

# Nosso sistema aqui tem

matriz_dos_coeficientes = array([[1,-1,0,0],
											[0, 1, -1, 0],
											[0, 0, 1, 0],
											[1, 0, 0, 1]])

# Resolução do sistema AX = B
# onde A = Matriz dos coeficientes, X = Vetor do Fluxo e B = Matriz das incognitas

matriz_das_incognitas = array([50,-120,350,870])

Vetor_do_Fluxo = dot(inv(matriz_dos_coeficientes),matriz_das_incognitas)


z = zeros(4)

for i in range(size(Vetor_do_Fluxo)):
	z[i] = round(Vetor_do_Fluxo[i], 1)
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-25 17:36:12) 
-- CODE:
from numpy import *
from numpy.linalg import *

# Nosso sistema aqui tem

matriz_dos_coeficientes = array([[1,-1,0,0],
											[0, 1, -1, 0],
											[0, 0, 1, 0],
											[1, 0, 0, 1]])

# Resolução do sistema AX = B
# onde A = Matriz dos coeficientes, X = Vetor do Fluxo e B = Matriz das incognitas

matriz_das_incognitas = array([50,-120,350,870])

Vetor_do_Fluxo = dot(inv(matriz_dos_coeficientes),matriz_das_incognitas)


z = zeros(4)

for i in range(size(Vetor_do_Fluxo)):
	z[i] = round(Vetor_do_Fluxo[i], 1)
	
print(z)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
